--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,11 +44,16 @@ a {
 
 .carousel-control-prev-icon {
   position: fixed;
-
+  top: 50%;
+  left: 10%;
+  transform: translate(-50%, -50%);
 }
 
 .carousel-control-next-icon {
   position: fixed;
+  top: 50%;
+  right: 3%;
+  transform: translate(-50%, -50%);
 }
 
 .animate-icon {
